# backend

./: .env.example  .gitignore  .gitlint  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose-testes.yml  docker-compose.yml  docker_compose_testes.yml  gunicorn.conf.py  pyproject.toml  teste_evento
.github/: pull_request_template.md
.github/workflows/: ci.yml
contextos_de_negocio/: typing.py
contextos_de_negocio/estrutura_de_provas/dominio/entidades/: entidades.py
contextos_de_negocio/estrutura_de_provas/dominio/objeto_de_valor/: objeto_de_valor.py
garcom/: barramento.py  config.py  representacoes.py
garcom/adaptadores/: agregado.py  dominio.py
garcom/adaptadores/orm/: orm.py  repositorio.py
garcom/adaptadores/tipos/: tipos.py
garcom/adaptadores/tipos_nao_primitivos/: avaliacao.py  exercicio.py  tipos.py  usuario.py
garcom/aplicacao/: main.py  sentry.py
garcom/camada_de_servicos/unidade_de_trabalho/: udt.py
garcom/contextos_de_negocio/: README.md  agregado.py
garcom/contextos_de_negocio/barramento/: estrutura_de_provas.py  identidade_e_acesso.py
garcom/contextos_de_negocio/estrutura_de_provas/: execessoes.py
garcom/contextos_de_negocio/estrutura_de_provas/dominio/agregados/: avaliacao.py  exercicio.py
garcom/contextos_de_negocio/estrutura_de_provas/dominio/comandos/: avaliacao.py  exercicio.py
garcom/contextos_de_negocio/estrutura_de_provas/dominio/entidades/: prova.py
garcom/contextos_de_negocio/estrutura_de_provas/dominio/eventos/: estrutura_de_provas.py
garcom/contextos_de_negocio/estrutura_de_provas/dominio/objeto_de_valor/: exercicio.py
garcom/contextos_de_negocio/estrutura_de_provas/dominio/regras_de_negocio/: exercicio.py
garcom/contextos_de_negocio/estrutura_de_provas/pontos_de_entrada/: api.py
garcom/contextos_de_negocio/identidade_e_acesso/: excecoes.py
garcom/contextos_de_negocio/identidade_e_acesso/pontos_de_entrada/: api.py  autenticacao.py  permissoes.py  representacoes.py
migracoes/: README.md  env.py
migracoes/versions/: cc763051f809_alterando_coluna_responsavel_da_tabela_.py  e00e769b7f32_criando_primeira_migração.py
tests/: README.md  conftest.py  mocks.py
tests/mocks_contextos/: usuario.py
tests/testes_funcionais/: test_funcional_rota_hellow.py  test_pontos_de_entrada_estrutura_de_provas.py  test_pontos_de_entrada_exercicios.py
tests/testes_funcionais/estrutura_de_provas/: test_pontos_de_entrada_avalicao.py  test_pontos_de_entrada_exercicios.py
tests/testes_funcionais/identidade_e_acesso/: test_pontos_de_entrada_api.py
tests/testes_integracao/: test_unidade_de_trabalho.py
tests/testes_unitarios/: mocks.py  test_barramento.py
tests/testes_unitarios/avaliacao/: test_agregado.py  test_servicos_executores.py  test_servicos_visualizadores.py
tests/testes_unitarios/estrutura_de_provas/avaliacao/: test_agregado.py  test_servicos_visualizadores.py
tests/testes_unitarios/estrutura_de_provas/exercicios/: test_agregado.py
tests/testes_unitarios/exercicios/: mocks.py  test_agregado.py  test_servicos_executores.py  test_servicos_visualizadores.py
tests/testes_unitarios/identidade_e_acesso/: mock_identidade_e_acesso.py  test_agregado.py
tests/testes_unitarios/identidade_e_acesso/pontos_de_entrada/: test_autenticacao.py  test_permissoes.py
tests/testes_unitarios/identidade_e_acesso/regras_de_negocio/: test_encriptografia.py
(+26 files in other folders)
