[tool.poetry]
name = "garcom"
version = "0.1.0"
description = ""
authors = [
  "OthonBreener <othonbrener123@gmail.com>",
  "taconi <igor.taconi@protonmail.com>",
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
dataclass-type-validator = "^0.1.2"
psycopg2-binary = "^2.9.5"
python-dotenv = "^1.0.0"
uvicorn = "^0.21.1"
gunicorn = "^20.1.0"
sqlalchemy = ">=1.4.47,<2"
pydotenv = "^0.0.7"
sqlalchemy-utils = "^0.40.0"
requests = "^2.28.2"
httpx = "^0.23.3"
loguru = "^0.6.0"
sentry-sdk = "^1.17.0"
python-jose = { extras = ["cryptography"], version = "^3.3.0" }
passlib = { extras = ["bcrypt"], version = "^1.7.4" }
python-multipart = "^0.0.6"
freezegun = "^1.2.2"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.2.1"
gitlint = "0.17.0"

[tool.poetry.group.test.dependencies]
ipdb = "^0.13.13"
pytest = "^7.2.2"
pytest-cov = "^4.0.0"
pytest-sugar = "^0.9.6"

[tool.poetry.group.lint.dependencies]
blue = "^0.9.1"
isort = "^5.12.0"
mypy = "^1.1.1"

[tool.isort]
multi_line_output = 3
line_length = 79
include_trailing_comma = true

[tool.mypy]
python_version = "3.10"
disallow_untyped_defs = true
check_untyped_defs = true
ignore_missing_imports = true
exclude = "garcom/config.py"

[tool.coverage.run]
branch = true
parallel = true
omit = ["garcom/__init__.py"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
